Add done button to keyboard on textview

--- a/Example/GearKit/Samples/Graphs/GKRadarGraph/GKRadarGraphEditSeriesViewController.xib
+++ b/Example/GearKit/Samples/Graphs/GKRadarGraph/GKRadarGraphEditSeriesViewController.xib
@@ -16,18 +16,27 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="6tO-QK-bpZ">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" style="grouped" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="6tO-QK-bpZ">
+                    <rect key="frame" x="0.0" y="108.5" width="600" height="491.5"/>
                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not yet implemented" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5us-Ky-lE2">
+                    <rect key="frame" x="0.0" y="80" width="600" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="1" green="0.079000837549999994" blue="0.093190818529999997" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="6tO-QK-bpZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="C4x-Uu-oi0"/>
+                <constraint firstItem="6tO-QK-bpZ" firstAttribute="top" secondItem="5us-Ky-lE2" secondAttribute="bottom" constant="8" id="2xV-A9-iHM"/>
+                <constraint firstItem="5us-Ky-lE2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="80" id="5Dg-Ve-bGj"/>
                 <constraint firstAttribute="bottom" secondItem="6tO-QK-bpZ" secondAttribute="bottom" id="LaL-tz-dBJ"/>
                 <constraint firstItem="6tO-QK-bpZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="LtE-jO-Umc"/>
                 <constraint firstAttribute="trailing" secondItem="6tO-QK-bpZ" secondAttribute="trailing" id="PU6-tl-SCZ"/>
+                <constraint firstItem="5us-Ky-lE2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="qHd-IG-8Bv"/>
+                <constraint firstAttribute="trailing" secondItem="5us-Ky-lE2" secondAttribute="trailing" id="v0g-J1-fUC"/>
             </constraints>
         </view>
     </objects>
